Fix incorrect always-overflow behavior in AutosizingPageView

--- a/src/fe/components/autosizing-page-view.less
+++ b/src/fe/components/autosizing-page-view.less
@@ -8,9 +8,6 @@
     &.may-overflow {
         overflow-y: auto;
     }
-    &.always-overflow {
-        overflow-y: visible;
-    }
 
     @media (max-width: 420px) {
         overflow: visible;
